[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://person.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 7.5 )

[node name="Player" type="RigidBody2D" groups=[
"player",
]]
mode = 2
gravity_scale = 0.0
linear_damp = 50.0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -4000
limit_top = -4000
limit_right = 4000
limit_bottom = 4000
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="ProximityArea" type="Area2D" parent="."]
collision_mask = 0

[node name="ProximityCollider" type="CollisionShape2D" parent="ProximityArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
scale = Vector2( 3, 3 )
shape = SubResource( 2 )
[connection signal="body_entered" from="ProximityArea" to="." method="_on_ProximityArea_body_entered"]
[connection signal="body_exited" from="ProximityArea" to="." method="_on_ProximityArea_body_exited"]
